--- a/package.json
+++ b/package.json
@@ -9,14 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "jsonwebtoken": "^9.0.2",
+    "next": "14.1.3",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.1.3"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
@@ -24,12 +22,15 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.15.12",
     "@mui/material": "^5.15.12",
+    "autoprefixer": "^10.0.1",
     "formik": "^2.4.5",
     "mongoose": "^8.2.1",
     "mui": "^0.0.1",
     "next": "14.1.2",
+    "postcss": "^8",
     "react": "^18",
     "react-dom": "^18",
-    "swiper": "^11.0.7"
+    "swiper": "^11.0.7",
+    "tailwindcss": "^3.3.0"
   }
 }
