--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "jsonwebtoken": "^9.0.2",
     "next": "14.1.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sweetalert": "^2.1.2"
   },
   "devDependencies": {
     "@emotion/react": "^11.11.4",
