--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
-    "sweetalert": "^2.1.2"
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.10.7"
   },
   "devDependencies": {
     "@emotion/react": "^11.11.4",
