--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-query": "^3.39.3",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.10.7"
   },
