--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 privateKey=fdgfdhsreUOA437R634GDB8C3C4579Q044
+
+LIARA_ENDPOINT='https://storage.iran.liara.space/'
+LIARA_BUCKET_NAME=maschatbucket
+LIARA_ACCESS_KEY=720l6qnoqkhp1cmh
+LIARA_SECRET_KEY=1e7f60c3-c69a-454f-99ce-2afa32031b6c
