--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.569.0",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
     "react-query": "^3.39.3",
+    "sharp": "^0.33.3",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.10.7"
   },
