--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-dom": "^18",
     "react-query": "^3.39.3",
     "sharp": "^0.33.3",
+    "socket.io": "^4.8.0",
+    "socket.io-client": "^4.8.0",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.10.7"
   },
